--- a/scss/info/_porque.scss
+++ b/scss/info/_porque.scss
@@ -2,7 +2,7 @@
     display: grid;
     place-items: center;
     width: 100%;
-    margin-top: 10%;
+    margin-top: 3rem;
     text-align: center;
     h1 {
         font-size: calc(var(--index) * 1.65);
