--- a/scss/cotizacion/_formulario.scss
+++ b/scss/cotizacion/_formulario.scss
@@ -18,6 +18,12 @@
         color: white;
         text-shadow: 0 0 15px #9d822b;
     }
+    h2 {
+        color: #aaa49d;
+        font-size: calc(var(--index) * .8);
+        text-shadow: 5px 5px 15px rgba(0, 0, 0, .3),
+                    -5px -5px 15px rgba(255, 255, 255, .1);
+    }
     .cotizacion_form {
         max-width: 600px;
         margin: auto;
@@ -68,7 +74,7 @@
 
 @media (max-width:1400px) {
     .container_cotizacion {
-        max-width: 1000px;
+        max-width: 900px;
     }
 }
 
@@ -80,18 +86,18 @@
 
 @media (max-width:1000px) {
     .container_cotizacion {
-        max-width: 600px;
+        max-width: 700px;
     }
 }
 
 @media (max-width:800px) {
     .container_cotizacion {
-        max-width: 400px;
+        max-width: 600px;
     }
 }
 
 @media (max-width:600px) {
     .container_cotizacion {
-        max-width: 200px;
+        max-width: 500px;
     }
 }
