--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,6 @@
 @import "./info/porque";
 @import "./info/proceso";
 @import "./cotizacion/formulario";
+@import "./info/tienda";
+@import "./info/medida";
+@import "./info/nosotros";
