--- a/scss/info/_nosotros.scss
+++ b/scss/info/_nosotros.scss
@@ -57,3 +57,50 @@
         }
     }
 }
+
+@media (max-width:820px) {
+    .nosotros {
+        .container_nosotros{
+            .text_nosotros {
+                width: 100vh;
+            }
+        }
+    }
+}
+
+@media (max-width:680px) {
+    .nosotros {
+        .container_nosotros{
+            .text_nosotros {
+                width: 80vh;
+                p {
+                    font-size: 1.5vh;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:550px) {
+    .nosotros {
+        .container_nosotros{
+            .text_nosotros {
+                width: 60vh;
+                i {
+                    padding: 1rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:400px) {
+    .nosotros {
+        .container_nosotros{
+            .text_nosotros {
+                width: 40vh;
+                height: 65vh;
+            }
+        }
+    }
+}
