--- a/style/main.css
+++ b/style/main.css
@@ -629,12 +629,7 @@ footer {
     .porque .container_porque .asesorias,
     .porque .container_porque .eliges,
     .porque .container_porque .estilo {
-      width: 30vh; }
-      .porque .container_porque .aprovecha i,
-      .porque .container_porque .asesorias i,
-      .porque .container_porque .eliges i,
-      .porque .container_porque .estilo i {
-        padding: 1rem; } }
+      width: 30vh; } }
 
 .proceso {
   display: grid;
@@ -1029,3 +1024,24 @@ footer {
         .nosotros .container_nosotros .text_nosotros p span {
           color: #aaa49d;
           text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1); }
+
+@media (max-width: 820px) {
+  .nosotros .container_nosotros .text_nosotros {
+    width: 100vh; } }
+
+@media (max-width: 680px) {
+  .nosotros .container_nosotros .text_nosotros {
+    width: 80vh; }
+    .nosotros .container_nosotros .text_nosotros p {
+      font-size: 1.5vh; } }
+
+@media (max-width: 550px) {
+  .nosotros .container_nosotros .text_nosotros {
+    width: 60vh; }
+    .nosotros .container_nosotros .text_nosotros i {
+      padding: 1rem; } }
+
+@media (max-width: 400px) {
+  .nosotros .container_nosotros .text_nosotros {
+    width: 40vh;
+    height: 65vh; } }
