--- a/scss/info/_nosotros.scss
+++ b/scss/info/_nosotros.scss
@@ -85,7 +85,7 @@
     .nosotros {
         .container_nosotros{
             .text_nosotros {
-                width: 60vh;
+                width: 400px;
                 i {
                     padding: 1rem;
                 }
@@ -98,7 +98,7 @@
     .nosotros {
         .container_nosotros{
             .text_nosotros {
-                width: 40vh;
+                width: 300px;
                 height: 65vh;
             }
         }
