--- a/scss/info/_nosotros.scss
+++ b/scss/info/_nosotros.scss
@@ -101,7 +101,9 @@
         .container_nosotros{
             .text_nosotros {
                 width: 300px;
-                height: 400px;
+                p {
+                    font-size: 8px;
+                }
             }
         }
     }
