--- a/style/main.css
+++ b/style/main.css
@@ -1055,6 +1055,4 @@ footer {
 
 @media (max-width: 400px) {
   .nosotros .container_nosotros .text_nosotros {
-    width: 300px; }
-    .nosotros .container_nosotros .text_nosotros p {
-      font-size: 8px; } }
+    width: 300px; } }
