--- a/scss/info/_nosotros.scss
+++ b/scss/info/_nosotros.scss
@@ -106,4 +106,32 @@
     }
 }
 
+@media (min-height:600px) {
+    .nosotros {
+        .container_nosotros {
+            .text_nosotros {
+                height: 400px;
+            }
+        }
+    }
+}
 
+@media (min-height:720px) {
+    .nosotros {
+        .container_nosotros {
+            .text_nosotros {
+                height: 500px;
+            }
+        }
+    }
+}
+
+@media (min-height:800px) {
+    .nosotros {
+        .container_nosotros {
+            .text_nosotros {
+                height: 600px;
+            }
+        }
+    }
+}
