--- a/scss/info/_nosotros.scss
+++ b/scss/info/_nosotros.scss
@@ -58,22 +58,55 @@
     }
 }
 
-@media (max-width:820px) {
+@media (max-width:1400px) {
     .nosotros {
         .container_nosotros{
             .text_nosotros {
-                width: 100vh;
+                width: 900px;
             }
         }
     }
 }
 
-@media (max-width:680px) {
+@media (max-width:1200px) {
+    .nosotros {
+        .container_nosotros{
+            .text_nosotros {
+                width: 800px;
+            }
+        }
+    }
+}
+
+@media (max-width:1000px) {
+    .nosotros {
+        .container_nosotros{
+            .text_nosotros {
+                width: 700px;
+            }
+        }
+    }
+}
+
+@media (max-width:800px) {
+    .nosotros {
+        .container_nosotros{
+            .text_nosotros {
+                width: 600px;
+            }
+        }
+    }
+}
+
+@media (max-width:600px) {
     .nosotros {
         margin-top: 15%;
         .container_nosotros{
             .text_nosotros {
-                width: 80vh;
+                width: 500px;
+                i {
+                    padding: 1rem;
+                }
                 p {
                     font-size: 1.5vh;
                 }
@@ -82,15 +115,12 @@
     }
 }
 
-@media (max-width:550px) {
+@media (max-width:500px) {
     .nosotros {
         margin-top: 20%;
         .container_nosotros{
             .text_nosotros {
                 width: 400px;
-                i {
-                    padding: 1rem;
-                }
             }
         }
     }
