--- a/style/main.css
+++ b/style/main.css
@@ -1033,25 +1033,37 @@ footer {
           color: #aaa49d;
           text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1); }
 
-@media (max-width: 820px) {
+@media (max-width: 1400px) {
   .nosotros .container_nosotros .text_nosotros {
-    width: 100vh; } }
+    width: 900px; } }
 
-@media (max-width: 680px) {
+@media (max-width: 1200px) {
+  .nosotros .container_nosotros .text_nosotros {
+    width: 800px; } }
+
+@media (max-width: 1000px) {
+  .nosotros .container_nosotros .text_nosotros {
+    width: 700px; } }
+
+@media (max-width: 800px) {
+  .nosotros .container_nosotros .text_nosotros {
+    width: 600px; } }
+
+@media (max-width: 600px) {
   .nosotros {
     margin-top: 15%; }
     .nosotros .container_nosotros .text_nosotros {
-      width: 80vh; }
+      width: 500px; }
+      .nosotros .container_nosotros .text_nosotros i {
+        padding: 1rem; }
       .nosotros .container_nosotros .text_nosotros p {
         font-size: 1.5vh; } }
 
-@media (max-width: 550px) {
+@media (max-width: 500px) {
   .nosotros {
     margin-top: 20%; }
     .nosotros .container_nosotros .text_nosotros {
-      width: 400px; }
-      .nosotros .container_nosotros .text_nosotros i {
-        padding: 1rem; } }
+      width: 400px; } }
 
 @media (max-width: 400px) {
   .nosotros .container_nosotros .text_nosotros {
